--- a/style.css
+++ b/style.css
@@ -170,3 +170,20 @@ main section {
 .btn-align {
     margin: 20px 0px 0px 170px;
 }
+.social-image {
+    margin: 0 240px 0px 240px;
+    padding: 100px;
+    align-items: center;
+    text-align: center;
+}
+
+.social-image-container {
+    display: flex;
+    justify-content:space-around;
+    gap:15px;
+    margin-top: 20px;
+}
+.image-cart {
+   height: 300px;
+   width: 250px;
+}
