--- a/style.css
+++ b/style.css
@@ -224,3 +224,32 @@ main section {
     font-size: 18px;
 
 }
+
+.footer-section {
+    margin-top: 100px;
+    background: #111010;
+    align-items: center;
+    text-align: center;
+    padding: 100px;
+
+}
+ .footer-title {
+    color: #E55473;
+    font-size: 48px;
+    font-weight: 800;
+}
+.footer-description {
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    width: 600px;
+    margin: 10px 280px 0px 280px;
+}
+.footer-date {
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 10px 280px 0px 280px;
+}
